--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,15 @@
   pointer-events: none;
 }
 
+.aside {
+  width: 100px;
+  height: 100%;
+  background-color: coral;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -14,18 +23,27 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  width: 100%;
+  height: 60px;
+  background-color: tomato;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 .App-link {
   color: #61dafb;
+}
+
+.footer {
+  width: 100%;
+  height: 100px;
+  background-color: slategray;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
 }
 
 @keyframes App-logo-spin {
@@ -35,4 +53,27 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.main-container {
+  display: flex;
+  height: calc(100vh - 160px);
+}
+
+.main {
+  flex: 1;
+  display: flex;
+  background-color: moccasin;
+  align-items: center;
+  justify-content: center;
+  overflow-y: auto;
+}
+
+.sidebar {
+  width: 100px;
+  height: 100%;
+  background-color: sandybrown;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
